fix: more things for the swagger
